[package]
name = "win-vpn-passlogic-autoconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
deranged = "0.3.7"
fs-err = "2.9.0"
itertools = "0.11.0"
reqwest = "0.11.18"
scraper = "0.17.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_with = "3.2.0"
toml = "0.7.6"
url = { version = "2.4.0", features = ["serde"] }
